--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 
 <head>
     <title>CSS for Masters</title>
+
+    p{
+    font-size: 10px;
+    }
 </head>
 
 <body>
-    <div id="header">
+    <p class="welcome" style="font-size: 10px;
+    color:red;">Welcome!</p>
+    <div id="header" style="position:absolute;
+    top: 0; left:0; width:100%">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the webside!</p>
     </div>
 
+    <p>Hello there ninjas!</p>
+    <p>Hello there ninjas!</p>
+    <p>Hello there ninjas!</p>
+    <p>Hello there ninjas!</p>
     <p>Hello there ninjas!</p>
 
 </body>
