--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 
 <head>
     <title>CSS for Masters</title>
+    <link rel="stylesheet" type="text/css" href="syntax.css">
 
-    p{
-    font-size: 10px;
-    }
 </head>
 
 <body>
-    <p class="welcome" style="font-size: 10px;
+    <p class="welcome" style="font-size: 20
+px;
     color:red;">Welcome!</p>
-    <div id="header" style="position:absolute;
-    top: 0; left:0; width:100%">
+    <div id="header" 
+    top: 0; left:0; width:100%"><br>
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the webside!</p>
+    </div><br>
+    <div>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
+        <p>Hello there ninjas!</p>
     </div>
-
-    <p>Hello there ninjas!</p>
-    <p>Hello there ninjas!</p>
-    <p>Hello there ninjas!</p>
-    <p>Hello there ninjas!</p>
-    <p>Hello there ninjas!</p>
-
 </body>
 
 </html>
