--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,17 @@
 </head>
 
 <body>
-    <div id="header"></div>
+    <div id="header"></div><br>
     <h1>Contact Us</h1>
     </div>
     <p>Hello there everybody!</p>
-    <p>Hello there everybody!</p>
-    <p>Hello there everybody!</p>
-    <p>Hello there everybody!</p>
-    <p>Hello there everybody!</p>
+
+    <p> Aren't paragraph's cool?</p>
+
+    <a href="http://www.google.com">Google</a>
+
+    <span>Hi, I'm a span tag</span>
+<hr>
 </body>
 
 </html>
