--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,27 @@
 
 <body>
     <div id="header"></div><br>
+
     <h1>Contact Us</h1>
+    <h2>Contact now!</h2>
+
     </div>
-    <p>Hello there everybody!</p>
 
-    <p> Aren't paragraph's cool?</p>
+    <h2 id="content-header">Hello there everybody!</h2>
 
-    <a href="http://www.google.com">Google</a>
+    <div id="content-header">
+        <p> Aren't<strong>paragraph's</strong> cool?</p>
+        <p> Aren't paragraph's cool?</p>
+    </div>
 
-    <span>Hi, I'm a span tag</span>
-<hr>
+    <p>Nono to say</p>
+
+    <span>Listen to me</span>
+    <span>Listen to me</span>
+    <span>Listen to me</span>
+    <span>Listen to me</span>
+    <span>Listen to me</span>
+
 </body>
 
 </html>
