--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 
     <h2 id="content-header">Hello there everybody!</h2>
 
-    <div id="content-header">
-        <p> Aren't<strong>paragraph's</strong> cool?</p>
-        <p> Aren't paragraph's cool?</p>
+    <div id="main-content">
+        <p> Aren't <strong>paragraph's</strong> cool?</p>
+        <p class="test"> Aren't paragraph's cool?</p>
     </div>
 
     <p>Nono to say</p>
