--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,18 @@
 
     <p>Nono to say</p>
 
-    <span>Listen to me</span>
-    <span>Listen to me</span>
-    <span>Listen to me</span>
-    <span>Listen to me</span>
-    <span>Listen to me</span>
+    <span>Listen me</span>
+    <span class="deck">Listen to me</span>
+    <span class="deck">Listen our team</span>
+    <span class="deck">Listen him</span>
+    <span>Listen her</span>
+
+    <a href="#">I am a link</a>
+
+    <ul>
+        <li>List items are fun</li>
+        <li>List items are fun</li>
+    </ul>
 
 </body>
 
